# Kurs_project_11_course

./: .env  .env.example  .gitignore  DEMO.md  README.md  check_subscription.py  docker-compose.yaml  encoding_demo.json  final_check.py  fix_db_encoding.py  profile_demo.json  pyproject.toml  requirements.txt  test_api.ps1  test_api_utf8.py  test_encoding_fix.py  test_field.py  test_final.py  test_serializer.py
config/: middleware.py  settings.py  urls.py
courses/: admin.py  models.py  models_backup.py  paginators.py  permissions.py  serializers.py  serializers_backup.py  tests.py  urls.py  views.py
courses/migrations/: 0001_initial.py  0002_initial.py  0003_subscription.py  0004_alter_course_options_alter_subscription_options.py
scripts/: check_db_encoding.py
users/: admin.py  forms.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/management/commands/: create_groups.py  create_test_data.py
users/migrations/: 0001_initial.py  0002_alter_user_managers.py
