[project]
name = "pythonproject11"
version = "0.1.0"
description = "Django DRF project with Celery and Stripe"
authors = [
    {name = "Rezilek", email = "rezilek@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    # Django
    "django>=5.2.10,<6.0.0",
    "djangorestframework>=3.16.1,<4.0.0",
    
    # Database
    "psycopg2-binary>=2.9.11,<3.0.0",
    
    # Authentication
    "djangorestframework-simplejwt>=5.5.1,<6.0.0",
    
    # Configuration
    "python-decouple>=3.8,<4.0",
    
    # Images - УСПЕШНАЯ ВЕРСИЯ
    "pillow==12.1.0",
    
    # Celery
    "celery>=5.6.2,<6.0.0",
    "redis>=5.2.1,<6.0.0",
    "django-celery-beat>=2.8.1,<3.0.0",
    
    # API & Documentation
    "django-cors-headers>=4.9.0,<5.0.0",
    "drf-spectacular>=0.29.0,<0.30.0",
    "django-filter>=25.2,<26.0",
    
    # Payments
    "stripe>=14.1.0,<15.0.0",
    
    # Utilities
    "django-extensions>=4.1,<5.0.0",
    "django-timezone-field>=7.2.1,<8.0.0",
    
    # HTTP
    "requests>=2.32.5,<3.0.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
